src/package/components/pa-scrollbar/index.scss
.pa-scrollbar {
  position: relative;
  width: 100%;
  height: 100%;
  overflow: hidden;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;

  .pa-scrollbar-content {
    width: 100%;
    height: 1px;
    flex: 1;
    overflow: hidden;
    display: flex;
    flex-direction: column;
  }

  .pa-scrollbar-content_footer {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .scrollbar-body {
    width: 100%;
    height: 100%;
    box-sizing: border-box;
    overflow: hidden;

    &::-webkit-scrollbar {
      width: 0;
      height: 0;
    }

    .scrollbar-body-content {
      position: relative;
    }

    .scrollbar-body-content.padding-top {
      padding-top: var(--pa-size-padding, 10px);
    }

    .scrollbar-body-content.padding-left {
      padding-left: var(--pa-size-padding, 10px);
    }

    .scrollbar-body-content.padding-bottom {
      padding-bottom: var(--pa-size-padding, 10px);
    }

    .scrollbar-body-content.padding-right {
      padding-right: var(--pa-size-padding, 10px);
    }
  }

  .scrollbar-body-y {
    overflow-y: scroll;
  }

  .scrollbar-body-x {
    overflow-x: scroll;

    > .scrollbar-body-content {
      width: fit-content;
    }
  }

  .scrollbar__bar {
    position: absolute;
    background-color: var(--pa-scrollbar-color);

    > .scrollbar__thumb {
      border-radius: 4px;
      opacity: 0.5;
      background-color: var(--pa-color-hover);

      &:hover {
        transition: var(--pa-animation-time, 0.2s);
        opacity: 0.8;
        cursor: pointer;
      }
    }
  }

  .scrollbar__bar.is-vertical {
    top: 0;
    right: 0;
    width: calc(var(--pa-size-padding, 10px) + 2px);
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: flex-start;
    z-index: 12;
    background-color: var(--pa-color-send-bg);

    > .scrollbar__thumb {
      width: calc(100% - 4px);
      height: 100px;
    }
  }

  .scrollbar__bar.is-horizontal {
    bottom: 0;
    left: 0;
    width: 100%;
    height: calc(var(--pa-size-padding, 10px) + 2px);
    display: flex;
    justify-content: flex-start;
    align-items: center;
    z-index: 11;
    background-color: var(--pa-color-send-bg);

    > .scrollbar__thumb {
      height: calc(100% - 4px);
      width: 100px;
    }
  }

  .is-scroll-top {
    width: 100%;
    transition: var(--pa-animation-time, 0.2s);
    z-index: 999;
    box-shadow: 0px 0 10px 1.5px var(--pa-color-black);
  }

  .is-scroll-end {
    width: 100%;
    transition: var(--pa-animation-time, 0.2s);
    z-index: 999;
    box-shadow: 0px 0 10px 1.5px var(--pa-color-black);
  }

  .pa-scrollbar-back-top {
    position: absolute;
    right: 24px;
    bottom: 40px;
    width: 30px;
    height: 30px;
    line-height: 30px;
    background: var(--pa-color-info-light-3);
    border-radius: 50%;
    text-align: center;
    color: #fff;
    box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
    z-index: 22;
    transition: var(--pa-animation-time, 0.2s);
  }
}

.pa-scrollbar:has(> .scrollbar__bar.is-vertical) {
  padding-right: calc(var(--pa-size-padding, 10px) + 2px);
}

.pa-scrollbar:has(> .scrollbar__bar.is-horizontal) {
  padding-bottom: calc(var(--pa-size-padding, 10px) + 2px);
}

.m-position-sticky {
  position: relative;

  .m-table-styles .table_body,
  .dialog__body {
    overflow: visible !important;
  }

  .no-sticky.m-table-styles {
    .table_body {
      overflow: hidden !important;
    }
  }
}

.color-scrollbar {
  --pa-color-send-bg: var(--pa-color-white);
  --pa-color-hover: var(--pa-color-primary-light-4);

  &:has(> .scrollbar__bar.is-vertical) {
    padding-right: 14px;
    width: calc(100% - var(--pa-size-padding, 10px));

    .scrollbar__bar.is-horizontal {
      width: calc(100% - 14px);
    }
  }

  &:has(> .scrollbar__bar.is-horizontal) {
    padding-bottom: 14px;
    height: calc(100% - var(--pa-size-padding, 10px));
    width: calc(100% - 14px);

    .scrollbar__bar.is-vertical {
      height: calc(100% - 14px);
    }
  }

  .scrollbar__bar.is-vertical {
    width: 8px;
    border-radius: 12px;
    box-shadow: 0 0 4px 3px var(--pa-color-primary-light-7);
    transform: translate(-3px, -3px) scale(1, 0.65);

    .scrollbar__thumb {
      width: 100%;
      border-radius: 10px;
    }
  }

  .scrollbar__bar.is-horizontal {
    height: 8px;
    border-radius: 12px;
    box-shadow: 0 0 4px 3px var(--pa-color-primary-light-7);
    transform: translate(-3px, -3px) scale(0.65, 1);

    .scrollbar__thumb {
      height: 100%;
      border-radius: 10px;
    }
  }
}

